<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.recommendations.RecomendationsAvtivity"
    card_view:cardCornerRadius="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_q"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_attraction_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attraction_name"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/tv_ratting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratting"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_attraction_name2"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/tv_ratting"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>